// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderTopLeftRadius renders 0 1`] = `
Array [
  .c0 {
  border-top-left-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopLeftRadius renders function 1`] = `
Array [
  .c0 {
  border-top-left-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopLeftRadius renders invalid theme path 1`] = `
Array [
  .c0 {
  border-top-left-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopLeftRadius renders negative number 1`] = `
Array [
  .c0 {
  border-top-left-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopLeftRadius renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-left-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-left-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-left-radius: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-left-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-left-radius: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopLeftRadius renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-top-left-radius: July;
  }
}

@media April {
  .c0 {
    border-top-left-radius: August;
  }
}

@media January {
  .c0 {
    border-top-left-radius: September;
  }
}

@media April {
  .c0 {
    border-top-left-radius: November;
  }
}

@media June {
  .c0 {
    border-top-left-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-top-left-radius: July;
  }
}

@media April {
  .c0 {
    border-top-left-radius: August;
  }
}

@media January {
  .c0 {
    border-top-left-radius: September;
  }
}

@media April {
  .c0 {
    border-top-left-radius: November;
  }
}

@media June {
  .c0 {
    border-top-left-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top-left-radius: January;
  }
}

@media April {
  .c0 {
    border-top-left-radius: December;
  }
}

@media January {
  .c0 {
    border-top-left-radius: April;
  }
}

@media April {
  .c0 {
    border-top-left-radius: May;
  }
}

@media June {
  .c0 {
    border-top-left-radius: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top-left-radius: January;
  }
}

@media April {
  .c0 {
    border-top-left-radius: December;
  }
}

@media January {
  .c0 {
    border-top-left-radius: April;
  }
}

@media April {
  .c0 {
    border-top-left-radius: May;
  }
}

@media June {
  .c0 {
    border-top-left-radius: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopLeftRadius renders postitive number 1`] = `
Array [
  .c0 {
  border-top-left-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopLeftRadius renders string 1`] = `
Array [
  .c0 {
  border-top-left-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopLeftRadius renders valid theme path 1`] = `
Array [
  .c0 {
  border-top-left-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-left-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
